# haskell-projects

./: Fuzzy.hs  Logic.hs  Polygon.hi  Polygon.hs  README.md  Vector.hs  bonds.hs  test.hs
GeneticAlgorithm.hsproj/: .uuid
GeneticAlgorithm.hsproj/GeneticAlgorithm/: GeneticAlgorithm.cabal  GeneticAlgorithm.hs  Main.hs  Test.hs  _GeneticAlgorithm.hsplay  _Main.hsplay  _Test.hsplay
HelloWorld.hsproj/: .uuid
HelloWorld.hsproj/HelloWorld/: HelloWorld.cabal
Interpolator.hsproj/: .uuid
Interpolator.hsproj/Interpolator/: Interpolator.cabal  Interpolator.hs  _Interpolator.hsplay
Json.hsproj/: .uuid
Json.hsproj/Json/: Json.cabal  Json.hs  PrettyJson.hs  PrettyStub.hs  _PrettyJson.hsplay  _PrettyStub.hsplay
Yaris.hsproj/: .uuid
Yaris.hsproj/Yaris/: Ai.hs  DataScience.hs  Fuzzy.hs  Genetic.hs  Json.hs  Memory.hs  Normalize.hs  Yaris.cabal  _Ai.hsplay  _DataScience.hsplay  _Fuzzy.hsplay  _Genetic.hsplay  _Json.hsplay  _Memory.hsplay  _Normalize.hsplay
iCanScript.hsproj/: .uuid
iCanScript.hsproj/iCanScript/: Main.hs  Script.hs  _Script.hsplay  iCanScript.cabal
