cabal-version: 2.4
name: Interpolator
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-3
x-last-ide-version: HfM1.8.2

executable Interpolator
    main-is: Main.hs
    other-modules:
        Interpolator
    default-language: Haskell2010
    build-depends:
        base -any
